--- a/web_static/styles/100-places.css
+++ b/web_static/styles/100-places.css
@@ -1,209 +1,135 @@
 .places {
+	position: relative;
+	width: 100%;
 	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	margin: 45px auto;
-	text-align: center;
+	flex-flow: column;
+	align-items: center;
 }
-
-article {
+.places h1 {
+	font-size: 30px;
+	align-self: flex-start;
+	margin: 10px 20px 0;
+}
+.places div{
 	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+}
+.places article {
 	width: 390px;
-	flex: none;
-	flex-wrap: wrap;
-	flex-direction: row;
-	align-content: flex-start;
-
-	padding-top: 10px;
-	padding-right: 20px;
-	padding-left: 20px;
-	padding-bottom: 40px;
+	padding: 20px;
 	margin: 20px;
-
 	border: 1px solid #FF5A5F;
 	border-radius: 4px;
-}
-
-.headline {
-	display: flex;
-	flex-direction: row;
 	position: relative;
-
-	height: 80px;	
-	width: 100%;
-}
-
-.price_by_night {
 	display: flex;
-	justify-content: center;
-	align-self: flex-end;
-
-	position: absolute;
-	right: 0;
-
-	line-height: 60px;
-	color: #FF5A5F;
+	flex-flow: column;
+	align-items: center;
+}
+.places article h2 {
 	font-size: 30px;
-	padding: 5px;
-	border: 4px solid #FF5A5F;
-	border-radius: 100%;
-	float: right;
+	text-align: center;
+}
+.places .place_header {
+	display: flex;
+	flex-flow: row nowrap;
+	align-items: center;
+	justify-content: space-around;
+	width: 100%;
+	padding-bottom: 1em;
+}
+.price_by_night {
+	color: #ff5a5f;
+	border: 4px #ff5a5f solid;
+	border-radius: 50%;
 	min-width: 60px;
 	height: 60px;
+	font-size: 30px;
+	padding: 10px 5px;
+	letter-spacing: -1px;
 }
-
-.information {
-	display: block;
+.places .information {
 	height: 80px;
-	width: 100%;
-	border-top: 1px solid #DDDDDD;
-	border-bottom: 1px solid #DDDDDD;
-
-	padding-top: 5px;
-	padding-bottom: 12px;
-	margin-top: 10px;
+	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0.5em 0;
 	margin-bottom: 20px;
-}
-
-.max_guest, .number_rooms, .number_bathrooms {
-	display: inline-block;
-	width: 100px;
-	text-align: center;
-	margin: 0px auto;
-}
-
-.user {
-	margin-top: 5px;
-	margin-bottom: 5px;	
-}
-
-.description {
-	text-align: left;
-}
-
-h1 {
-	display: block;
-	text-align: left;
-	width: 95%;
-	display: block;
-	margin-top: 0px;
-	margin-left: 20px;
-	margin-bottom: 5px;
-	font-size: 30px;
-}
-
-article .amenities {
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
-	margin-top: 40px;
-}
-
-.article_subtitle {
-	font-size: 16px;
-	text-align: left;
-	width: 100%;
-	border-bottom: 1px solid #DDDDDD;
-	padding: 0px;
-	margin: 0px;
-	padding-bottom: 10px;
-}
-
-.article_title {
-	font-size: 30px;
-	margin: 10px auto;
-	padding: 0px;
-}
-
-article ul {
-	text-align: left;
-	margin-top: 20px;
-	margin-bottom: 0px;
-	padding-bottom: 0px;
-}
-
-article li {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-content: flex-start;
-	margin-bottom: 10px;
-}
-
-.reviews {
-	margin-top: 40px;
 	width: 100%;
 }
-
-.review_item {
-	margin-bottom: 10px;
-}
-
-.review_text {
-	margin: 0px;
-}
-
-article h3 {
-	font-size: 14px;
-	padding: 0px;
-	margin: 0px;
-	margin-bottom: 5px;
-
-}
-
-.guest_icon {
-	display: inline-block;
-	background-image: url("../images/icon_group.png");
-	background-repeat: no-repeat;
-	background-position: center;
+.icon {
 	width: 50px;
 	height: 50px;
 }
-
-.bed_icon {
-	display: inline-block;
-	background-image: url("../images/icon_bed.png");
-	background-repeat: no-repeat;
-	background-position: center;
-    width: 50px;
-    height: 50px;
+.max_guest,
+.number_rooms,
+.number_bathrooms {
+	width: 100px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
-
-.bath_icon {
-	display: inline-block;
-	background-image: url("../images/icon_bath.png");
-	background-repeat: no-repeat;
-	background-position: center;
-    width: 50px;
-    height: 50px;
+.icon.guests{
+	background: url('../images/icon_group.png') no-repeat;
 }
-
-.tv_icon {
-	display: inline-block;
-	background-image: url("../images/icon_tv.png");
-	background-size: cover;
+.icon.bed{
+	background: url('../images/icon_bed.png') no-repeat;
+}
+.icon.bath{
+	background: url('../images/icon_bath.png') no-repeat;
+}
+.user {
+	text-align: left;
+	align-self: flex-start;
+	margin-bottom: 10px;
+}
+.places .amenities,
+.places .reviews{
+	margin-top: 40px;
+	width: 100%;
+}
+.places .amenities h2,
+.places .reviews h2 {
+	font-size: 16px;
+	border-bottom: 1px solid #ddd;
+	width: 100%;
+	text-align: left;
+	margin-bottom: 1em;
+}
+.places .amenities ul,
+.places .reviews ul {
+	width: 100%;
+	text-align: left;
+}
+.places .amenities ul li {
+	margin-bottom: 1em;
+	display: flex;
+	align-items: center;
+}
+.places .amenities .icon {
 	width: 20px;
 	height: 20px;
-
-	margin-right: 10px;
+	background-size: contain;
+	margin-right: 1em;
 }
-
-.wifi_icon {
-	display: inline-block;
-    background-image: url("../images/icon_wifi.png");
-    background-size: cover;
-	width: 20px;
-    height: 20px;
-
-	margin-right: 10px;
+.icon.tv{
+	background: url('../images/icon_tv.png') no-repeat;
 }
-
-.pet_icon {
-	display: inline-block;
-    background-image: url("../images/icon_pets.png");
-	background-size: cover;
-    width: 20px;
-	height: 20px;
-
-	margin-right: 10px;
+.icon.pet {
+	background: url('../images/icon_pets.png') no-repeat;
+}
+.icon.wifi {
+	background: url('../images/icon_wifi.png') no-repeat;
+}
+.places .reviews ul li {
+	margin-bottom: 1em;
+}
+.places .reviews ul li h3 {
+	font-size: 14px;
+}
+.reviews ul li p {
+	font-size: 12px;
 }
