--- a/web_static/styles/102-filters.css
+++ b/web_static/styles/102-filters.css
@@ -1,101 +1,110 @@
 .filters {
-	display: block;
-	background-color: white;
+	position: relative;
+	background-color: #FFF;
 	height: 70px;
 	width: 100%;
-	border: 1px solid #DDDDDD;
+	border: 1px solid #ddd;
 	border-radius: 4px;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
 }
-
-.locations {
-	display: inline;
-	vertical-align: middle;
-	float: left;
-	height: 100%;
-	width: 25%;
-
-	line-height: 20px;
-	border-right: 1px solid #DDDDDD;
-}
-
-.filter_amenities {
-	display: inline;
-	vertical-align: middle;
-	height: 100%;
-	float: left;
-    width: 25%;
-
-	line-height: 20px;
-}
-
-.popover {
-	list-style-type: none;
-	display: none;
-	background-color: #FAFAFA;
-	width: 100%;
-
-	margin-left: -1px;
-	margin-top: 8px;
-	padding: 25px 0px;
-
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
-}
-
-.locations:hover .popover {
+.filters button {
 	display: inline-block;
-}
-
-.filter_amenities:hover .popover {
-	display: inline-block;
-}
-
-ul {
-	list-style-type: none;
-	padding: 0px;
-	padding-bottom: 20px;
-}
-
-li {
-}	
-
-h2 {
-	font-size: 16px;
-	padding-left: 30px;
-	margin: 0px;
-}
-
-h3 {
-	font-weight: 600;
-	margin-top: 12px;
-	margin-bottom: 5px;	
-	padding-left: 45px;
-}
-
-h4 {
-	font-size: 14px;
-	font-weight: 400;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	padding-left: 45px;
-}
-
-button {
-	color: #FFFFFF;
-	font-size: 18px;
-	
+	font-size: 1.125rem;
+	background-color: #FF5A5F;
+	color: #FFF;
 	height: 48px;
 	width: 20%;
-	background-color: #FF5A5F;
-	border-style: none;
+	border: none;
 	border-radius: 4px;
-
-	float: right;
-	margin-top: 11px;
-	margin-bottom: 11px;
-	margin-right: 30px;
+	position: absolute;
+	right: 30px;
+	cursor: pointer;
+}
+.filters button:hover {
+	opacity: 90%;
+}
+.filters > div {
+	height: 100%;
+	width: 25%;
+	text-align: left;
+	padding: 17px 0;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+.filters div:first-child {
+	border-right: 1px solid #ddd;
+}
+.filters > div h3 {
+	font-weight: 600;
+	padding-left: 2.5em;
+}
+.filters > div h4 {
+	font-weight: 400;
+	font-size: 0.875rem;
+	padding-left: 2.5em;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+.popover {
+	display: none;
+	background-color: #fafafa;
+	width: 100%;
+	padding: 2em 1em 2em 2.5em;
+	margin-top: 19px;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	text-align: left;
+	position: relative;
+	z-index: 400;
+}
+.popover > li {
+	margin-bottom: 0.5em;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+.popover ul {
+	margin-bottom: 1em;
+	margin-left: 1em;
+}
+.popover ul li {
+	margin-bottom: 2px;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+.popover h2 {
+	font-size: 1rem;
+}
+.amenities .popover{
+	position: relative;
+	left: -1px;
+}
+.filters > div:hover .popover{
+	display: block;
 }
 
-button:hover {
-	opacity: 90%;
+@media only screen and (max-width: 586px) {
+	.filters > div h3,
+	.filters > div h4{
+		padding-left: 1em;
+	}
+	.filters button {
+		right: 15px;
+		width: 15%;
+		padding-top: 10px;
+		overflow: hidden;
+	}
+	.filters button i {
+		display: inline-block;
+		width: 40px;
+		height: 36px;
+		background: url('../images/icon_search.png') no-repeat;
+	}
+	.filters > div{
+		width: 35%;
+	}
+	.popover {
+		padding: 1em;
+	}
 }
