--- a/web_static/styles/102-header.css
+++ b/web_static/styles/102-header.css
@@ -1,18 +1,13 @@
 header {
-	background-color: white;
-	height: 70px;
-	width: 100%;
-	
-	border-bottom: 1px solid #CCCCCC;
+  width: 100%;
+  height: 70px;
+  background-color: #FFF;
+  border-bottom: 1px solid #CCC;
 }
-
-#header_logo {
-	height: 100%;
+.header-logo{
+	display: inline-block;
+	background: url('../images/airbnb_logo.png') no-repeat;
 	width: 142px;
-
-	background-image: url("../images/logo.png");
-	background-repeat: no-repeat;
-	background-position: center;
-
+	height: 60px;
 	margin-left: 20px;
 }
