--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -1,8 +1,16 @@
-body {
-	margin:0px;
-	padding:0px;
-
+html {
+	font-size: 100%;
+}
+*,
+*:before,
+*:after {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 	color: #484848;
 	font-size: 14px;
-	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-family: Circular,"Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+ul{
+	list-style: none;
 }
