--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,13 +1,21 @@
-body {
-	margin:0px;
-	padding:0px;
-
-	color: #484848;
-	font-size: 14px;
-	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+html {
+	font-size: 100%;
 }
-
+*,
+*:before,
+*:after {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	color: #484848;
+  font-size: 14px;
+  font-family: Circular,"Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+ul{
+	list-style: none;
+}
 .container {
-    max-width: 1000px;
-    margin: 30px auto;
+	max-width: 1000px;
+	margin: 30px auto;
+	padding-bottom: 60px;
 }
