--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,27 +1,27 @@
 .filters {
-	background-color: white;
+	position: relative;
+	background-color: #FFF;
 	height: 70px;
 	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;	
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
 }
-
-button {
-	color: #FFFFFF;
+.filters button {
+	display: inline-block;
 	font-size: 18px;
-	
+	background-color: #FF5A5F;
+	color: #FFF;
 	height: 48px;
 	width: 20%;
-	background-color: #FF5A5F;
-	border-style: none;
+	border: none;
 	border-radius: 4px;
-
-	float: right;
-	margin-top: 11px;
-	margin-bottom: 11px;
-	margin-right: 30px;
+	position: absolute;
+	right: 30px;
+	cursor: pointer;
 }
-
-button:hover {
+.filters button:hover {
 	opacity: 90%;
 }
