--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,61 +1,49 @@
 .filters {
-	background-color: white;
+	position: relative;
+	background-color: #FFF;
 	height: 70px;
 	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;	
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
 }
-
-.locations {
+.filters button {
 	display: inline-block;
-	vertical-align: middle;
-
-	height: 100%;
-	width: 25%;
-
-	margin-left: 45px;
-	border-right: 1px solid #DDDDDD;
-}
-
-.amenities {
-	display: inline-block;
-	vertical-align: middle;
-
-	height: 100%;
-    width: 25%;
-
-	margin-left: 45px;
-}
-
-h3 {
-	font-weight: 600;
-	margin-top: 12px;
-	margin-bottom: 5px;	
-}
-
-h4 {
-	font-size: 14px;
-	font-weight: 400;
-	margin-top: 5px;
-	margin-bottom: 12px;
-}
-
-button {
-	color: #FFFFFF;
 	font-size: 18px;
-	
+	background-color: #FF5A5F;
+	color: #FFF;
 	height: 48px;
 	width: 20%;
-	background-color: #FF5A5F;
-	border-style: none;
+	border: none;
 	border-radius: 4px;
-
-	float: right;
-	margin-top: 11px;
-	margin-bottom: 11px;
-	margin-right: 30px;
+	position: absolute;
+	right: 30px;
+	cursor: pointer;
 }
-
-button:hover {
+.filters button:hover {
 	opacity: 90%;
+}
+.filters > div {
+	height: 100%;
+	width: 25%;
+	text-align: left;
+	padding: 17px 0;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+.filters div:first-child {
+	border-right: 1px solid #ddd;
+}
+.filters > div h3 {
+	font-weight: 600;
+	padding-left: 2.5em;
+}
+.filters > div h4 {
+	font-weight: 400;
+	font-size: 14px;
+	padding-left: 2.5em;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
