--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,32 +1,32 @@
 .places {
-	display: block;
-	margin: 45px auto;
-	text-align: center;
+	position: relative;
+	width: 100%;
+	display: flex;
+	flex-flow: column;
+	align-items: center;
 }
-
-article {
-	display: inline-block;
+.places h1 {
+	font-size: 30px;
+	align-self: flex-start;
+	margin: 10px 20px 0;
+}
+.places div{
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+}
+.places article {
 	width: 390px;
 	padding: 20px;
 	margin: 20px;
 	border: 1px solid #FF5A5F;
 	border-radius: 4px;
+	position: relative;
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+}
+.places article h2 {
+	font-size: 30px;
 	text-align: center;
-}
-
-h1 {
-	float: left;
-	text-align: left;
-	width: 95%;
-	display: block;
-	margin-top: 0px;
-	margin-left: 20px;
-	margin-bottom: 5px;
-	font-size: 30px;
-}
-
-article h2 {
-	font-size: 30px;
-	padding: 0px;
-	margin: auto;
 }
