pycodestyle compliant changes

--- a/web_flask/templates/100-hbnb.html
+++ b/web_flask/templates/100-hbnb.html
@@ -10,6 +10,7 @@
         <LINK rel="stylesheet" href="/static/styles/3-footer.css"/>
         <LINK rel="stylesheet" href="/static/styles/3-header.css"/>
         <LINK rel="stylesheet" href="/static/styles/6-filters.css"/>
+        <LINK rel="stylesheet" href="/static/styles/8-places.css"/>
     </HEAD>
     <BODY>
         <HEADER>
@@ -43,6 +44,41 @@
         				</UL>
         		</DIV>
         		<BUTTON>Search</BUTTON>
+        	</SECTION>
+        	<SECTION class="places">
+        		<h1>Places</h1>
+        		<div>
+        			{% for place in places|sort(attribute="name") %}
+		        		<article>
+		        			<div class="place_header">
+		        				<h2>{{ place.name }}</h2>
+		        				<div class="price_by_night">
+		        					${{ place.price_by_night }}
+		        				</div>
+		        			</div>
+		        			<div class="information">
+		        				<div class="max_guest">
+		        					<i class="icon guests"></i>
+		        					{{ place.max_guest }} Guests
+		        				</div>
+		        				<div class="number_rooms">
+		        					<i class="icon bed"></i>
+		        					{{ place.number_rooms }} Bedrooms
+		        				</div>
+		        				<div class="number_bathrooms">
+		        					<i class="icon bath"></i>
+		        					{{ place.number_bathrooms }} Bathrooms
+		        				</div>
+		        			</div>
+		        			<div class="user">
+		        				<strong>Owner</strong>: {{ place.user.name }}
+		        			</div>
+		        			<div class="description">
+		        				{{ place.description|safe }}
+		        			</div>
+		        		</article>
+          		{% endfor %}
+          	</div>
         	</SECTION>
         </DIV>
         <FOOTER>
