--- a/web_static/styles/103-places.css
+++ b/web_static/styles/103-places.css
@@ -44,9 +44,12 @@
 	border-radius: 50%;
 	min-width: 60px;
 	height: 60px;
+	padding: 10px 2.5px;
+	line-height: 100%;
 	font-size: 1.875rem;
-	padding: 10px 5px;
-	letter-spacing: -1px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .places .information {
 	height: 80px;
